CSS correction contraste header informations

--- a/front/css/style.css
+++ b/front/css/style.css
@@ -54,11 +54,12 @@ h2 {
 
 /*informations*/
 .informations {
-	font-size: 13px;
+	font-size: 20px;
+	font-weight: bold;
 	background-color: var(--main-color);
 }
 .informations img {
-	height: 17px;
+	height: 20px;
 }
 .informations ul {
 	display: flex;
